--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  position: relative;
+  width: 1440px;
+  height: 900px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
