--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,10 +1,4 @@
-h1,
-h3,
-p {
-  font-family: "Asap", sans-serif;
-  color: #5594ef;
-  font-style: normal;
-}
+
 
 .login-form-container {
   position: absolute;
@@ -15,19 +9,13 @@ p {
 
 .form-title {
   margin-bottom: 1.5rem;
-  width: 498px;
-  height: 39px;
-
   font-weight: 600;
   font-size: 2.125rem;
-  line-height: 39px;
+  line-height: 2.438rem;
 }
 
 .form-subtitle {
   margin-bottom: 2.5rem;
-  width: 361px;
-  height: 52px;
-
   font-weight: normal;
   font-size: 0.938rem;
   line-height: 1.625rem;
@@ -41,32 +29,26 @@ p {
 }
 
 .username-field {
-  font-family: "Asap", sans-serif;
   font-size: 1rem;
-  color: #5594ef;
   margin-bottom: 1.25rem;
-
   width: 31.125rem;
   height: 56px;
 }
 
 .senha-field {
-  font-family: "Asap", sans-serif;
   margin-bottom: 1.5rem;
   font-size: 1rem;
-
-  width: 31.125rem;
-  height: 3.5rem;
 }
 
 .submit-btn {
   height: 3rem;
+  background-color: #5594EF;
+  border-style: none;
 }
 
 .reset-password {
   height: 1rem;
   margin-bottom: 2.5rem;
-  color: #6da3f1;
   font-size: 0.875rem;
   font-weight: normal;
   font-style: normal;
